--- a/a2/main.ipynb
+++ b/a2/main.ipynb
@@ -680,6 +680,334 @@
    "source": [
     "df2.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patient 1 Shape: (24999, 7)\n",
+      "Patient 2 Shape: (25000, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Patient 1 Shape: {df1.shape}\")\n",
+    "print(f\"Patient 2 Shape: {df2.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RESP</th>\n",
+       "      <th>BP-S</th>\n",
+       "      <th>BP-D</th>\n",
+       "      <th>SpO2</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>PULSE</th>\n",
+       "      <th>Anomaly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>24999.000000</td>\n",
+       "      <td>24999.000000</td>\n",
+       "      <td>24999.000000</td>\n",
+       "      <td>24999.000000</td>\n",
+       "      <td>24999.000000</td>\n",
+       "      <td>24999.000000</td>\n",
+       "      <td>24999.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>23.763951</td>\n",
+       "      <td>83.889756</td>\n",
+       "      <td>121.411656</td>\n",
+       "      <td>99.041282</td>\n",
+       "      <td>88.562342</td>\n",
+       "      <td>87.975439</td>\n",
+       "      <td>0.065683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4.492832</td>\n",
+       "      <td>4.746617</td>\n",
+       "      <td>8.966590</td>\n",
+       "      <td>1.304528</td>\n",
+       "      <td>9.592311</td>\n",
+       "      <td>9.219837</td>\n",
+       "      <td>0.247731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>114.000000</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>121.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>129.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>127.000000</td>\n",
+       "      <td>170.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>119.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               RESP          BP-S          BP-D          SpO2            HR  \\\n",
+       "count  24999.000000  24999.000000  24999.000000  24999.000000  24999.000000   \n",
+       "mean      23.763951     83.889756    121.411656     99.041282     88.562342   \n",
+       "std        4.492832      4.746617      8.966590      1.304528      9.592311   \n",
+       "min        0.000000     66.000000     88.000000      0.000000      0.000000   \n",
+       "25%       21.000000     81.000000    114.000000     98.000000     81.000000   \n",
+       "50%       23.000000     83.000000    121.000000     99.000000     88.000000   \n",
+       "75%       26.000000     87.000000    129.000000    100.000000     95.000000   \n",
+       "max       42.000000    127.000000    170.000000    100.000000    120.000000   \n",
+       "\n",
+       "              PULSE       Anomaly  \n",
+       "count  24999.000000  24999.000000  \n",
+       "mean      87.975439      0.065683  \n",
+       "std        9.219837      0.247731  \n",
+       "min        0.000000      0.000000  \n",
+       "25%       81.000000      0.000000  \n",
+       "50%       88.000000      0.000000  \n",
+       "75%       95.000000      0.000000  \n",
+       "max      119.000000      1.000000  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RESP</th>\n",
+       "      <th>BP-S</th>\n",
+       "      <th>BP-D</th>\n",
+       "      <th>SpO2</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>PULSE</th>\n",
+       "      <th>Anomaly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>25000.000000</td>\n",
+       "      <td>25000.000000</td>\n",
+       "      <td>25000.000000</td>\n",
+       "      <td>25000.000000</td>\n",
+       "      <td>25000.000000</td>\n",
+       "      <td>25000.000000</td>\n",
+       "      <td>25000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>17.621400</td>\n",
+       "      <td>53.966440</td>\n",
+       "      <td>73.920600</td>\n",
+       "      <td>94.526280</td>\n",
+       "      <td>77.004120</td>\n",
+       "      <td>76.180320</td>\n",
+       "      <td>0.031480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.560338</td>\n",
+       "      <td>7.752623</td>\n",
+       "      <td>10.038658</td>\n",
+       "      <td>2.137993</td>\n",
+       "      <td>6.611137</td>\n",
+       "      <td>5.954691</td>\n",
+       "      <td>0.174615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>67.000000</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>76.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>82.000000</td>\n",
+       "      <td>96.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>211.000000</td>\n",
+       "      <td>217.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>131.000000</td>\n",
+       "      <td>128.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               RESP          BP-S          BP-D          SpO2            HR  \\\n",
+       "count  25000.000000  25000.000000  25000.000000  25000.000000  25000.000000   \n",
+       "mean      17.621400     53.966440     73.920600     94.526280     77.004120   \n",
+       "std        3.560338      7.752623     10.038658      2.137993      6.611137   \n",
+       "min        0.000000     37.000000     52.000000     81.000000      0.000000   \n",
+       "25%       15.000000     50.000000     67.000000     93.000000     73.000000   \n",
+       "50%       17.000000     54.000000     73.000000     94.000000     76.000000   \n",
+       "75%       20.000000     60.000000     82.000000     96.000000     79.000000   \n",
+       "max       42.000000    211.000000    217.000000     99.000000    131.000000   \n",
+       "\n",
+       "              PULSE       Anomaly  \n",
+       "count  25000.000000  25000.000000  \n",
+       "mean      76.180320      0.031480  \n",
+       "std        5.954691      0.174615  \n",
+       "min       54.000000      0.000000  \n",
+       "25%       72.000000      0.000000  \n",
+       "50%       75.000000      0.000000  \n",
+       "75%       79.000000      0.000000  \n",
+       "max      128.000000      1.000000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.describe()"
+   ]
   }
  ],
  "metadata": {
