chore: a2: add missing val section

--- a/a2/main.ipynb
+++ b/a2/main.ipynb
@@ -1008,6 +1008,146 @@
    "source": [
     "df2.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patient 1 Duplicate Count: 9445\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RESP       0\n",
+       "BP-S       0\n",
+       "BP-D       0\n",
+       "SpO2       0\n",
+       "HR         0\n",
+       "PULSE      0\n",
+       "Anomaly    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f\"Patient 1 Duplicate Count: {df1.duplicated().sum()}\")\n",
+    "\n",
+    "df1.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patient 2 Duplicate Count: 16551\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RESP       0\n",
+       "BP-S       0\n",
+       "BP-D       0\n",
+       "SpO2       0\n",
+       "HR         0\n",
+       "PULSE      0\n",
+       "Anomaly    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f\"Patient 2 Duplicate Count: {df2.duplicated().sum()}\")\n",
+    "\n",
+    "df2.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- No duplicates in both df1 and df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RESP       41\n",
+       "BP-S       56\n",
+       "BP-D       77\n",
+       "SpO2        6\n",
+       "HR         52\n",
+       "PULSE      54\n",
+       "Anomaly     2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RESP       37\n",
+       "BP-S       46\n",
+       "BP-D       51\n",
+       "SpO2       19\n",
+       "HR         56\n",
+       "PULSE      50\n",
+       "Anomaly     2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.nunique()"
+   ]
   }
  ],
  "metadata": {
