feat: a2: add id3 class

--- a/a2/main.ipynb
+++ b/a2/main.ipynb
@@ -931,6 +931,20 @@
     "    X_train_smote, y_train_smote = smote.fit_resample(X_train, y_train)\n",
     "    return X_train_smote, X_test, y_train_smote, y_test"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ID3 Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
