feat: a2: add custom id3 implementation

--- a/a2/main.ipynb
+++ b/a2/main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "4    29    81   120    99  73     73        0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "4    15    55    74    97  72     71        0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -434,28 +434,20 @@
        "</div>"
       ],
       "text/plain": [
-       "               RESP          BP-S          BP-D          SpO2            HR  \\\n",
-       "count  24999.000000  24999.000000  24999.000000  24999.000000  24999.000000   \n",
-       "mean      23.763951     83.889756    121.411656     99.041282     88.562342   \n",
-       "std        4.492832      4.746617      8.966590      1.304528      9.592311   \n",
-       "min        0.000000     66.000000     88.000000      0.000000      0.000000   \n",
-       "25%       21.000000     81.000000    114.000000     98.000000     81.000000   \n",
-       "50%       23.000000     83.000000    121.000000     99.000000     88.000000   \n",
-       "75%       26.000000     87.000000    129.000000    100.000000     95.000000   \n",
-       "max       42.000000    127.000000    170.000000    100.000000    120.000000   \n",
+       "               RESP          BP-S  ...         PULSE       Anomaly\n",
+       "count  24999.000000  24999.000000  ...  24999.000000  24999.000000\n",
+       "mean      23.763951     83.889756  ...     87.975439      0.065683\n",
+       "std        4.492832      4.746617  ...      9.219837      0.247731\n",
+       "min        0.000000     66.000000  ...      0.000000      0.000000\n",
+       "25%       21.000000     81.000000  ...     81.000000      0.000000\n",
+       "50%       23.000000     83.000000  ...     88.000000      0.000000\n",
+       "75%       26.000000     87.000000  ...     95.000000      0.000000\n",
+       "max       42.000000    127.000000  ...    119.000000      1.000000\n",
        "\n",
-       "              PULSE       Anomaly  \n",
-       "count  24999.000000  24999.000000  \n",
-       "mean      87.975439      0.065683  \n",
-       "std        9.219837      0.247731  \n",
-       "min        0.000000      0.000000  \n",
-       "25%       81.000000      0.000000  \n",
-       "50%       88.000000      0.000000  \n",
-       "75%       95.000000      0.000000  \n",
-       "max      119.000000      1.000000  "
+       "[8 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -585,28 +577,20 @@
        "</div>"
       ],
       "text/plain": [
-       "               RESP          BP-S          BP-D          SpO2            HR  \\\n",
-       "count  25000.000000  25000.000000  25000.000000  25000.000000  25000.000000   \n",
-       "mean      17.621400     53.966440     73.920600     94.526280     77.004120   \n",
-       "std        3.560338      7.752623     10.038658      2.137993      6.611137   \n",
-       "min        0.000000     37.000000     52.000000     81.000000      0.000000   \n",
-       "25%       15.000000     50.000000     67.000000     93.000000     73.000000   \n",
-       "50%       17.000000     54.000000     73.000000     94.000000     76.000000   \n",
-       "75%       20.000000     60.000000     82.000000     96.000000     79.000000   \n",
-       "max       42.000000    211.000000    217.000000     99.000000    131.000000   \n",
+       "               RESP          BP-S  ...         PULSE       Anomaly\n",
+       "count  25000.000000  25000.000000  ...  25000.000000  25000.000000\n",
+       "mean      17.621400     53.966440  ...     76.180320      0.031480\n",
+       "std        3.560338      7.752623  ...      5.954691      0.174615\n",
+       "min        0.000000     37.000000  ...     54.000000      0.000000\n",
+       "25%       15.000000     50.000000  ...     72.000000      0.000000\n",
+       "50%       17.000000     54.000000  ...     75.000000      0.000000\n",
+       "75%       20.000000     60.000000  ...     79.000000      0.000000\n",
+       "max       42.000000    211.000000  ...    128.000000      1.000000\n",
        "\n",
-       "              PULSE       Anomaly  \n",
-       "count  25000.000000  25000.000000  \n",
-       "mean      76.180320      0.031480  \n",
-       "std        5.954691      0.174615  \n",
-       "min       54.000000      0.000000  \n",
-       "25%       72.000000      0.000000  \n",
-       "50%       75.000000      0.000000  \n",
-       "75%       79.000000      0.000000  \n",
-       "max      128.000000      1.000000  "
+       "[8 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +669,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +705,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,10 +925,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def test_and_predict(df,model,outcome):\n",
+    "    X_train, X_test, y_train, y_test = smote_data(df,outcome)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    pred = model.predict(X_test)\n",
+    "\n",
+    "    from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "    accuracy = accuracy_score(y_test, pred)\n",
+    "    report = classification_report(y_test, pred)\n",
+    "    conf_matrix = confusion_matrix(y_test, pred)\n",
+    "\n",
+    "    return accuracy, report, conf_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.971\n",
+      "Report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.97      0.98      4667\n",
+      "           1       0.72      0.93      0.81       333\n",
+      "\n",
+      "    accuracy                           0.97      5000\n",
+      "   macro avg       0.86      0.95      0.90      5000\n",
+      "weighted avg       0.98      0.97      0.97      5000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ID3 import DecisionTreeClassifier\n",
+    "\n",
+    "accuracy,report,conf_matrix = test_and_predict(df1,DecisionTreeClassifier(),'Anomaly')\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"Report: {report}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9958\n",
+      "Report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00      4667\n",
+      "           1       0.96      0.98      0.97       333\n",
+      "\n",
+      "    accuracy                           1.00      5000\n",
+      "   macro avg       0.98      0.99      0.98      5000\n",
+      "weighted avg       1.00      1.00      1.00      5000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "accuracy,report,conf_matrix = test_and_predict(df1,DecisionTreeClassifier(),'Anomaly')\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"Report: {report}\")"
+   ]
   }
  ],
  "metadata": {
