chore: a3$ add dependencies

--- a/a3/main.ipynb
+++ b/a3/main.ipynb
@@ -1,5 +1,14 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regression (Linear and Logistic) and LDA using TensorFlow\n",
+    "BITS F464 Assigment 3"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
